# news-pubsub

./: .dockerignore  .env  .gitignore  .log.output.json  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Readme.md  configuration.yaml  deploy-stage.yml  deploy.yml
.github/workflows/: rust.yml
.sqlx/: query-ff553a242609894127ac91b88e073eb8ba9499cdcb8c4e098b7018c54dfeb4eb.json
config/: base.yaml
migrations/: 20230717234116_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: fetch_mongo.rs  fetch_pg_native.rs  fetch_sqlx.rs  health.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
