[package]
name = "news-pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-appender = "0.2.2"
nanoid = "0.4.0"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "news_pubsub"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false
